calliope: data refreshed

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -12,33 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_bad = [\n",
-    "    [\"We use cookies on our website to give you the most relevant experience by remembering your preferences and repeat visits. By clicking 'Accpet' you consent to the use of ALL the cookies\", 'bad'],\n",
-    "    [\"Art UK has updated its cookies policy. By using this website you are agreeing to the use of cookies. To find out more read our updated Use of Cookies policy and our updated Privacy policy\", 'bad'],\n",
-    "    [\"We use cookies for performance, analytics, and advertising purposes. By continuing to use this website, you agree to allow cookies to be placed. Learn more.\", 'bad'],\n",
-    "    [\"We use cookies on our websites for a number of purposes, including analytics and performance, functionality and advertising. Learn more about our use of cookies.\", 'bad'],\n",
-    "    [\"But first, cookies. We use cookies to improve your experience and deliver personalized content. By using InVision, you agree to our Cookie Policy.\", 'bad'],\n",
-    "    [\"Cookies. Cookies are used to access and store information on your device, to offer personalized content and ads based on your data. By choosing 'I agree' you consent to Deezer and its partners' use of cookies. You can refuse or withdraw consent by choosing 'Manage settings'\", 'bad'],\n",
-    "    [\"Back Market uses functional cookies required for browsing this site. We and our partners also use cookies that allow us to measure traffic and show you personalized content and ads rather than basic shiz. Think sea salt chocolate chunk vs. oatmeal raisin. You can change your preferences later by clicking 'Cookies' at the bottom of any page. Tell me more about those Cookies\", 'bad'],\n",
-    "    [\"This website uses cookies to improve your experience. We'll assume you're ok with this, but you can opt-out if you wish. Read More\", 'bad'],\n",
-    "]\n",
+    "import pandas as pd\n",
     "\n",
-    "data_good = [\n",
-    "    [\"We use necessary cookies to make our site work. We’d like to set additional cookies to understand site usage, make site improvements and to remember your settings. We also use cookies set by other sites to help deliver content from their services. View our Cookie Notice\", 'good'],\n",
-    "    [\"We value your privacy. We use cookies to enhance your browsing experience, serve personalized ads or content, and analyze our traffic. By clicking 'Accept All', you consent to our use of cookies.\", 'good'],\n",
-    "    [\"Cookie consent. This website uses cookies to improve your experience. We will assume you are ok with this, but you can opt-out if you wish. View our privacy policy\", 'good'],\n",
-    "    [\"Cookie consent. This website uses cookies that help the website to function and also track how you interact with our website. But for us to provide the best user experience, enable the specific cookies from Settings, and click on Accept\", 'good'],\n",
-    "    [\"We use cookies on our website to give you the most relevant experience by remembering your preferences and repeat visits. By clicking 'Accept All', you consent to the use of ALL the cookies. However, you may visit 'Cookie Settings' to provide a controlled consent.\", 'good'],\n",
-    "    [\"By clicking 'Allow All', you agree to the storing of cookies on your device to enhance site navigation and to analyse site usage. Read more here.\", 'good'],\n",
-    "    [\"The choice is yours. We use cookies to give you the best possible experience when using our website. BY clicking 'Accept All', we can bring you relevant advertising and personalized content -- and generally give you a much more enhanced visit. If you'd rather take the time to set which cookies we can use, click 'Manage Settings'. Your choices can always be changed at a later date here.\", 'good'],\n",
-    "    [\"Hi! We use cookies and similar technologies ('cookies'), including third-party cookies, on this website to help oeprate and improve your experience on our site, monitor our site performance, and for advertising purposes. For more information on how we use cookies and your cookie choices, go here for our cookie policy! By clicking 'Accept Cookies' below,  you are giving us consent to use cookies (except consent is not required for cookies necessary to run our site). You can change your cookie settings, and withdraw your consent at any time, by clicking on 'Cookie Settings' below.\", 'good']\n",
-    "]\n",
-    "\n",
-    "data = data_bad + data_good"
+    "df = pd.read_csv('combined_ms.csv')\n",
+    "data = df.to_numpy()"
    ]
   },
   {
@@ -53,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['But', 'first', 'cookies', 'We', 'use', 'cookies', 'to', 'improve', 'your', 'experience', 'and', 'deliver', 'personalized', 'content', 'By', 'using', 'InVision', 'you', 'agree', 'to', 'our', 'Cookie', 'Policy'], 'bad')\n"
+      "(['We', 'use', 'cookies', 'and', 'other', 'tracking', 'technologies', 'to', 'improve', 'your', 'browsing', 'experience', 'on', 'our', 'site', 'show', 'personalized', 'content', 'and', 'targeted', 'ads', 'analyze', 'site', 'traffic', 'and', 'understand', 'where', 'our', 'audience', 'is', 'coming', 'from', 'To', 'find', 'out', 'more', 'or', 'to', 'optout', 'please', 'read', 'our', 'Cookie', 'Policy', 'In', 'addition', 'please', 'read', 'our', 'Privacy', 'Policy', 'which', 'has', 'also', 'been', 'updated', 'and', 'became', 'effective', 'May', '23rd', '2018', 'By', 'choosing', 'I', 'Accept', 'you', 'consent', 'to', 'our', 'use', 'of', 'cookies', 'and', 'other', 'tracking', 'technologies'], 'GOOD')\n"
      ]
     }
    ],
@@ -91,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,32 +103,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train Naive Bayes classifier\n",
     "featuresets = [(document_features(d), c) for (d,c) in documents]\n",
-    "train_set, test_set = featuresets[5:], featuresets[:5]\n",
+    "train_set, test_set = featuresets[80:], featuresets[:80]\n",
     "classifier = nltk.NaiveBayesClassifier.train(train_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4\n"
+      "0.75\n"
      ]
     }
    ],
    "source": [
     "# Test the classifier\n",
     "print(nltk.classify.accuracy(classifier, test_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.metrics import ConfusionMatrix"
    ]
   },
   {
@@ -161,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -169,11 +159,11 @@
      "output_type": "stream",
      "text": [
       "Most Informative Features\n",
-      "           contains(use) = False            good : bad    =      1.2 : 1.0\n",
-      "           contains(you) = False            good : bad    =      1.2 : 1.0\n",
-      "           contains(and) = True             good : bad    =      1.2 : 1.0\n",
-      "            contains(to) = True             good : bad    =      1.2 : 1.0\n",
-      "           contains(use) = True              bad : good   =      1.0 : 1.0\n"
+      "           contains(and) = False             BAD : GOOD   =     18.4 : 1.0\n",
+      "           contains(our) = False             BAD : GOOD   =      3.9 : 1.0\n",
+      "           contains(and) = True             GOOD : BAD    =      2.0 : 1.0\n",
+      "            contains(to) = False            GOOD : BAD    =      1.3 : 1.0\n",
+      "           contains(our) = True             GOOD : BAD    =      1.3 : 1.0\n"
      ]
     }
    ],
@@ -188,9 +178,7 @@
    "metadata": {},
    "source": [
     "### Next tasks\n",
-    "- Find ways to improve model performance\n",
-    "- Try to run this model from the extension\n",
-    "- Explore options for the option weight classifier"
+    "- Find ways to improve model performance"
    ]
   }
  ],
@@ -210,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
