calliope.ipynb: moved out of notebooks, added pickling

--- a/calliope.ipynb
+++ b/calliope.ipynb
@@ -173,19 +173,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Next tasks\n",
-    "- Find ways to improve model performance"
+    "## Saving the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle5 as pickle\n",
+    "\n",
+    "save_classifier = open('calliope.pickle', 'wb')\n",
+    "pickle.dump(classifier, save_classifier) \n",
+    "save_classifier.close()"
    ]
   }
  ],
